--- a/url-shortener/package.json
+++ b/url-shortener/package.json
@@ -24,5 +24,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=9.0.0"
   }
 }
